fix(player): prevent text from image's alt tag from overflowing the player

--- a/src/Coral.Frontend/src/styles/Player.module.css
+++ b/src/Coral.Frontend/src/styles/Player.module.css
@@ -3,6 +3,7 @@
   padding: 1rem;
   z-index: 100;
   background: var(--app-background);
+  overflow: hidden;
 }
 
 .imageBox {
